--- a/Index.Html
+++ b/Index.Html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <h1>Walrussen zijn cool</h1>
+    <h1>Walrussen zijn cool</h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
