--- a/Index.Html
+++ b/Index.Html
@@ -14,6 +14,7 @@
     <h1>Hello, world!</h1>
     <h1>Walrussen zijn cool</h1>
     <h1>Walrussen zijn cool</h1>
+    <h2>Ik ben awsome</h2>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
