Ukj nog een x toegevoegd

--- a/Index.Html
+++ b/Index.Html
@@ -19,6 +19,7 @@
     <h4>Ik ben bezig</h4>
     <h5>06094</h5>
     <h6>Ukj</h6>
+    <h6>Ukj</h6>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
